# geochemxl

./: README.adoc  pyproject.toml  requirements.txt
geochemxl/: __init__.py  __main__.py  convert.py  converter.py  defined_namespaces.py  utils.py
templates/: GeochemXL-3.0.xlsx
tests/: test_conversion.py  test_converter.py  test_reporting.py  test_utils.py
tests/data/3.0/: GeochemXL-3.0-integration.xlsx  geochemxl.ttl
