[tool.poetry]
name = "geochemxl"
version = "0.1.0"
description = "A pure Python library that converts Australian geochemistry data in Excel structured according to the GGIC geochmistry template into RDF data conforming to the Geochemistry Data Model"
authors = ["Nicholas Car <nick@kurrawong.ai>"]
license = "CC BY 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rdflib = "7.0.0"
openpyxl = "^3.1.2"
pyshacl = "^0.25.0"
pyproj = "^3.6.1"
colorama = "^0.4.6"
utm = "^0.7.0"
dateparser = "^1.2.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
